# distributed

./: README.md
d_parser_ui/: .env  Readme.md  create_structure.sh  docker-compose.yml
d_parser_ui/client/: Dockerfile  README.md
d_parser_ui/client/DataParserApp/: CMakeLists.txt  aboutpage.cpp  aboutpage.h  authmanager.cpp  authmanager.h  basepage.cpp  basepage.h  homepage.cpp  homepage.h  login.cpp  login.h  mainpage.h  mainwindow.cpp  mainwindow.h  profile.cpp  profile.h  register.cpp  register.h  resources.qrc
d_parser_ui/db/: init.sql
d_parser_ui/server/: CMakeLists.txt  database.cpp  database.h  main.cpp  server.cpp  server.h
distributed_model/: .gitignore  Dockerfile  README.md  Untitled.ipynb  docker-compose.yaml  help.txt  requirements.txt  tasks.txt  Отчет 1.docx
distributed_model/.cache/matplotlib/: fontlist-v390.json
distributed_model/.ipython/profile_default/: history.sqlite
distributed_model/.jupyter/: migrated
distributed_model/.jupyter/lab/workspaces/: auto-a-3530.jupyterlab-workspace  auto-b-ca51.jupyterlab-workspace  auto-h-4e46.jupyterlab-workspace  default-37a8.jupyterlab-workspace
distributed_model/src/data/chess/: parquet_stats.html
distributed_model/src/data/fingerprint/: fingerprint.html
distributed_model/src/data/graph/: find_by_nick.html
distributed_model/src/data/summary/: READ.md  Readme.md  prob.md  summary.md  teams_map.html
distributed_model/src/data/teams/: get_geo_by_team.html
distributed_model/src/scripts/: app.py  config.json  filtered_lichess_clubs.py  fingerprint.py  gui.py  parquet_stats.py  parse_pgn.py  probability.md  probability.py
distributed_model/src/scripts/ddos/: compute_mva_tail.py  compute_real_metrics.py  create_logs_from_github.py  generate_metrics_from_csv.py  generate_metrics_json.py  help.txt  metrics.json
distributed_model/src/scripts/spark/: find_by_nick.ipynb  find_by_nick.py  visualize_graph.py
distributed_model/src/scripts/teams/: get_geo_by_team.ipynb  parse__top_teams.py  teams_geo.py  (+1 more)
distributed_parser/: cmds.txt
distributed_parser/kubernetes/worker/: worker-deployment.yaml
(+6 files in other folders)
